--- a/src/sass/components/_puzzle.scss
+++ b/src/sass/components/_puzzle.scss
@@ -1,15 +1,30 @@
 .puzzle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   background-color: $puzzle-content-color;
+  border-radius: 1rem;
+  border: 0.1rem solid black;
+  &__info {
+    font-size: 2.4rem;
+  }
+
   &__content {
-    display: grid;
-    grid-row-gap: 0.1rem;
-    grid-column-gap: 0.1rem;
+    position: relative;
+
+    // display: grid;
+    // grid-row-gap: 0.1rem;
+    // grid-column-gap: 0.1rem;
+    border: 0.1rem solid black;
 
     .item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       border: 0.1rem solid black;
+      font-size: 2.4rem;
+      width: 10rem;
+      height: 10rem;
+      position: absolute;
+      transition: all 0.4s;
+      cursor: pointer;
     }
   }
 }
