feat: added menu

--- a/src/sass/constants/_constants.scss
+++ b/src/sass/constants/_constants.scss
@@ -1,2 +1,7 @@
 $puzzle-board-color: lightgreen;
 $puzzle-content-color: white;
+
+$tablet-width-intermediate: 1024px;
+$tablet-width: 767px;
+$mobile-width-intermediate: 575px;
+$mobile-width: 320px;
