--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
 @import 'constants/constants';
 @import 'base/base';
+@import 'abstract/mixin';
+@import 'components/menu';
 @import 'components/puzzle';
