update: fixed bugs and almost completed task

--- a/src/sass/constants/_constants.scss
+++ b/src/sass/constants/_constants.scss
@@ -1,5 +1,6 @@
 $puzzle-board-color: lightgreen;
 $puzzle-content-color: white;
+$base-item-width: 100px;
 
 $tablet-width-intermediate: 1024px;
 $tablet-width: 767px;
