--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -17,7 +17,7 @@
     font-size: 2.5rem;
   }
 
-  @include media-tablet {
+  @include media-mobile-intermediate {
     margin: 50% 30%;
     font-size: 1.6rem;
   }
@@ -40,8 +40,6 @@
       z-index: 3;
       color: antiquewhite;
       cursor: pointer;
-      animation-duration: 4s;
-      animation-timing-function: ease-out;
     }
   }
 }
