--- a/src/sass/components/_puzzle.scss
+++ b/src/sass/components/_puzzle.scss
@@ -1,36 +1,38 @@
-.puzzle {
-  background-color: $puzzle-content-color;
-  border-radius: 1rem;
-  border: 0.1rem solid black;
-  &__info {
-    font-size: 2.4rem;
-    display: flex;
-    justify-content: space-around;
-  }
-
-  &__content {
-    position: relative;
-
+.main {
+  
+  .puzzle {
+    background-color: $puzzle-content-color;
+    border-radius: 1rem;
     border: 0.1rem solid black;
-    margin: auto;
-
-    .item {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 0.1rem solid black;
+    &__info {
       font-size: 2.4rem;
-      width: 10rem;
-      height: 10rem;
-      position: absolute;
-      transition: all 0.4s;
-      cursor: pointer;
-      &-0 {
+      display: flex;
+      justify-content: space-around;
+    }
+
+    &__content {
+      position: relative;
+      border: 0.1rem solid black;
+      margin: 3rem auto;
+
+      .item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border: 0.1rem solid black;
-        transition: none;
-        width: 10rem;
-        height: 10rem;
+        font-size: 2.4rem;
+        width: 7rem !important;
+        height: 7rem !important;
         position: absolute;
+        transition: all 0.4s;
+        cursor: pointer;
+        &-0 {
+          border: 0.1rem solid black;
+          transition: none;
+          width: 7rem !important;
+          height: 7rem !important;
+          position: absolute;
+        }
       }
     }
   }
