--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,4 +2,5 @@
 @import 'base/base';
 @import 'abstract/mixin';
 @import 'components/menu';
+@import 'components/game-list';
 @import 'components/puzzle';
