--- a/src/sass/components/_puzzle.scss
+++ b/src/sass/components/_puzzle.scss
@@ -1,5 +1,4 @@
 .main {
-  
   .puzzle {
     background-color: $puzzle-content-color;
     border-radius: 1rem;
@@ -8,6 +7,21 @@
       font-size: 2.4rem;
       display: flex;
       justify-content: space-around;
+      padding-top: 1rem;
+      .reset-image {
+        box-shadow: 0 1px rgba(255, 255, 255, 0.2) inset,
+          0 3px 5px rgba(0, 1, 6, 0.5), 0 0 1px 1px rgba(0, 1, 6, 0.2);
+        transition: 0.2s ease-in-out;
+        width: 3rem;
+        &:hover {
+          cursor: pointer;
+        }
+        &:active {
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0.5) inset,
+            0 2px 3px rgba(0, 0, 0, 0.5) inset,
+            0 1px 1px rgba(255, 255, 255, 0.1);
+        }
+      }
     }
 
     &__content {
@@ -24,8 +38,10 @@
         width: 7rem !important;
         height: 7rem !important;
         position: absolute;
-        transition: all 0.4s;
-        cursor: pointer;
+        transition: all 0.5s;
+        &:hover {
+          cursor: pointer;
+        }
         &-0 {
           border: 0.1rem solid black;
           transition: none;
